Fixed encryption and decryption functions. Refactored Cipher.java class.

--- a/build.gradle
+++ b/build.gradle
@@ -13,5 +13,6 @@ dependencies {
 
     testCompile 'junit:junit:+'
     testCompile 'com.google.guava:guava:+'
+    testCompile 'org.hamcrest:hamcrest-all:+'
 
 }
